# cfasodapy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  zensical.toml
.github/workflows/: docs.yaml  pypi.yaml  pytest.yaml  tag-version.yaml
docs/: api.md  index.md
src/cfasodapy/: __init__.py
tests/: test_cfasodapy.py
