[project]
name = "cfasodapy"
version = "0.1.2"
description = "Query Socrata databases"
readme = "README.md"
authors = [{ name = "Scott Olesen", email = "ulp7@cdc.gov" }]
requires-python = ">=3.10"
dependencies = ["requests>=2.30"]

[project.urls]
Repository = "https://github.com/CDCgov/cfasodapy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.5"]
docs = [
    "mkdocstrings-python>=2.0.3",
    "zensical>=0.0.43",
]
