[project]
name = "cfasodapy"
version = "0.2.0"
description = "Query Socrata databases"
readme = "README.md"
authors = [{ name = "Scott Olesen", email = "ulp7@cdc.gov" }]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/CDCgov/cfasodapy"
Documentation = "https://cdcgov.github.io/cfasodapy/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.5"]
docs = ["mkdocstrings-python>=2.0.3", "zensical>=0.0.43"]
